sidu-installer (0.1-5) unstable; urgency=low

  * Fix: Syntax error in startgui.sh
  * Refactoring: some code has been moved from rootfspage.php and mountpointpage.php to diskinfo.php.
  * Automatic refresh if no partition info is available.
  * Session.testFile(): general solution for an asyncron file generation.
  * Session.forceReload(): general solution for page reloading.
  * Fix: Deletes user data only if it exists.
  * Fix: Preloading can have 2 or 3 arguments.
  * Message when we wait for the partition info.

 -- Hamatoma <siduction@hm.f-r-e-i.de>  Sat, 12 Nov 2011 11:04:06 +0100

sidu-installer (0.1-4) unstable; urgency=low

  * Fix: Syntax error in install.sh

 -- Hamatoma <siduction@hm.f-r-e-i.de>  Fri, 11 Nov 2011 21:26:40 +0100

sidu-installer (0.1-3) unstable; urgency=low

  * Fix: startgui.sh: configuration variable START_GUI_HOME for home. Necessary for .Xauthority.
  * Standard poll rate for the website: 3 second.
  * Shows the duration of the installation.
  * Fix: $ in password hash must be quoted.
  * Fix: Syntax error in install.sh

 -- Hamatoma <siduction@hm.f-r-e-i.de>  Fri, 11 Nov 2011 00:20:42 +0100

sidu-installer (0.1-2) unstable; urgency=low

  [ Hamatoma ]
  * Password hash generation with mkpasswd
  * Password check for '-'
  * Button "clear configuration"
  * Fix: Password check
  * Minimum length of a password is configurable.
  * Replacing the button when the installation has been finished.

 -- Hamatoma <siduction@hm.f-r-e-i.de>  Wed, 09 Nov 2011 23:24:04 +0100

sidu-installer (0.1-1) unstable; urgency=low

  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>

 -- hamatoma <siduction@hm.f-r-e-i.de>  Sun, 23 Oct 2011 10:25:37 +0200